Added LoginPage and SignupPage

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
-# Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,flask
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,flask
+# Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,flask,react
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,flask,react
 
 ### Flask ###
 instance/*
@@ -168,6 +168,21 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+### react ###
+.DS_*
+logs
+**/*.backup.*
+**/*.back.*
+
+node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -213,7 +228,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,flask
+# End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,flask,react
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
