--- a/.gitignore
+++ b/.gitignore
@@ -228,6 +228,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+
+backend/capstone.db
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,flask,react
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
